[gd_scene load_steps=3 format=3 uid="uid://cbuijs3m885d6"]

[ext_resource type="Script" path="res://src/properties/crop/PropCrop.gd" id="1_ry055"]
[ext_resource type="Script" path="res://src/widgets/PivotSelector.gd" id="3_o7vju"]

[node name="Crop" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_ry055")

[node name="title" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"title"
text = "Crop"
horizontal_alignment = 1

[node name="divider" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"HDivider"

[node name="row" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="column" type="VBoxContainer" parent="row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_position" type="Label" parent="row/column"]
layout_mode = 2
text = "Position"

[node name="PosX" type="SpinBox" parent="row/column"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
prefix = "X:"

[node name="PosY" type="SpinBox" parent="row/column"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
prefix = "Y:"

[node name="v-holder" type="VSeparator" parent="row"]
layout_mode = 2

[node name="column-2" type="VBoxContainer" parent="row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_size" type="Label" parent="row/column-2"]
layout_mode = 2
text = "Size"

[node name="Width" type="SpinBox" parent="row/column-2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2

[node name="Height" type="SpinBox" parent="row/column-2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 30)
layout_mode = 2

[node name="holder" type="HSeparator" parent="."]
layout_mode = 2

[node name="row2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="column" type="VBoxContainer" parent="row2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="label_pivot" type="Label" parent="row2/column"]
layout_mode = 2
text = "Pivot"

[node name="OptPivot" type="Control" parent="row2/column"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("3_o7vju")
pivot_point_radius = 6

[node name="column2" type="VBoxContainer" parent="row2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="label_pivot" type="Label" parent="row2/column2"]
layout_mode = 2
text = "Actions"

[node name="Cancel" type="Button" parent="row2/column2"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Cancel"
flat = true

[node name="Apply" type="Button" parent="row2/column2"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Apply"

[node name="HBoxContainer" type="HBoxContainer" parent="row2/column2"]
visible = false
layout_mode = 2
size_flags_vertical = 3
